# balance

./: .dockerignore  .gitignore  BalanceLexer.g4  BalanceParser.g4  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  LanguageDesign.md  README.md  STL_API.md  TODO  TODO.md  TestFile.bl  build.sh  debug.sh  install.sh  languageServer.sh  run.sh  runProject.sh  test.sh  testFile.bl  type-mapping.bl
.github/workflows/: build.yml  publish.yml
cmake/: config.h.in.cmake  rapidjson.cmake
docker/: build.sh  run.sh
examples/: class.bl  files.bl  for.bl  functions.bl  generics.bl  if.bl  inheritance.bl  interface_not_implemented.bl  interfaces.bl  lambdas.bl  overloading.bl  package.json  variables.bl  while.bl
examples/cyclicProject/: fileB.bl  notes.md  package.json
examples/project/: fileA.bl  fileB.bl  package.json
examples/project/subfolder/: fileC.bl
extensions/vscode-balance/: CHANGELOG.md  LICENSE  README.md  notes.txt  package-lock.json  package.json  package_backup.json  test.js  test.js.map
extensions/vscode-balance/src/: extension.ts
extensions/vscode-balance/syntaxes/: balance.tmLanguage.json
language-server/: install.sh  notes.txt
scripts/: buildLlvm.sh
src/: BalancePackage.cpp  BalancePackage.h  Builder.cpp  Builtins.cpp  Builtins.h  ImportVisitor.cpp  Main.cpp  Main.h  Package.cpp  Package.h  Utilities.cpp  Utilities.h  Visitor.cpp
src/builtins/: Any.cpp  Any.h  Array.cpp  Array.h  Bool.cpp  Bool.h  BuiltinType.cpp  BuiltinType.h  Double.cpp  Double.h  FatPointer.cpp  FatPointer.h  File.cpp  File.h  Int.cpp  Int.h  Lambda.cpp  Lambda.h  None.cpp  None.h  String.cpp  String.h  Type.cpp  Type.h
src/builtins/natives/: Int64.cpp  Int64.h  Int64Pointer.cpp  Int64Pointer.h  Int8Pointer.cpp  Int8Pointer.h
src/headers/: Builder.h  Builtins.h  ConstructorVisitor.h  ForwardDeclarationVisitor.h  ImportVisitor.h  Main.h  Package.h  TypeVisitor.h  Utilities.h  Visitor.h
src/language-server/: LanguageServer.cpp  LanguageServer.h
src/models/: BalanceClass.cpp  BalanceClass.h  BalanceFunction.cpp  BalanceFunction.h  BalanceInterface.cpp  BalanceInterface.h  BalanceLambda.h  BalanceModule.cpp  BalanceModule.h  BalanceParameter.cpp  BalanceParameter.h  BalanceProperty.cpp  BalanceProperty.h  BalanceScopeBlock.h  BalanceSource.cpp  BalanceSource.h  BalanceType.cpp  BalanceType.h  BalanceTypeString.cpp  BalanceTypeString.h  BalanceValue.cpp  BalanceValue.h  default
src/standard-library/: Range.cpp  Range.h  range.bl
src/visitors/: ClassVTableVisitor.cpp  ClassVTableVisitor.h  ConstructorVisitor.cpp  FinalizePropertiesVisitor.cpp  FinalizePropertiesVisitor.h  ForwardDeclarationVisitor.cpp  GenericTypeRegistrationVisitor.cpp  GenericTypeRegistrationVisitor.h  InheritanceVisitor.cpp  InheritanceVisitor.h  InterfaceVTableVisitor.cpp  InterfaceVTableVisitor.h  LLVMTypeVisitor.cpp  LLVMTypeVisitor.h  PackageVisitor.cpp  PackageVisitor.h  StructureVisitor.cpp  StructureVisitor.h  TokenVisitor.cpp  TokenVisitor.h  TypeRegistrationVisitor.cpp  TypeRegistrationVisitor.h  TypeVisitor.cpp  TypeVisitor.h  VTableVisitor.cpp  VTableVisitor.h  Visitor.cpp  Visitor.h
tests/: ASTTests.cpp  ASTTests.h  CompileTests.cpp  CompileTests.h  ExampleTests.cpp  ExampleTests.h  TestHelpers.cpp  TestHelpers.h  TypeTests.cpp  TypeTests.h
tests/typing/: arrays.bl  classes.bl  duplicate.bl  functions.bl  lambdas.bl  memberAssignment.bl  reassignment.bl  returns.bl
